# librtcdcpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh
cmake/Modules/: FindLibNice.cmake  FindLibnice.cmake  FindLog4cxx.cmake  FindSpdlog.cmake  FindUsrSCTP.cmake  FindUsrsctp.cmake
examples/: README.md  site-api.py
examples/.env/: pip-selfcheck.json
examples/static/: index.html
examples/websocket_client/: CMakeLists.txt  Makefile  WebSocketWrapper.cpp  WebSocketWrapper.hpp  easywsclient.cpp  easywsclient.hpp  jsoncpp.cpp  logging.cfg  testclient.cpp  testclient_answer.cpp  testclient_offer.cpp  wsclient.c
examples/websocket_client/json/: json-forwards.h
include/: Chunk.hpp  ChunkQueue.hpp  DTLSWrapper.hpp  DataChannel.hpp  NiceWrapper.hpp  PeerConnection.hpp  SCTPWrapper.hpp  librtcdcpp.h
include/json/: json.h
include/rtcdcpp/: Chunk.hpp  ChunkQueue.hpp  DTLSWrapper.hpp  DataChannel.hpp  Logging.hpp  NiceWrapper.hpp  PeerConnection.hpp  RTCCertificate.hpp  SCTPWrapper.hpp  librtcdcpp.h
src/: DTLSWrapper.cpp  DataChannel.cpp  Logging.cpp  NiceWrapper.cpp  PeerConnection.cpp  RTCCertificate.cpp  SCTPWrapper.cpp  librtcdcpp.c
